<resources>
  <string name="app_name">TopMovies</string>

  <string name="movie_list_fragment_label">Top Movies</string>
  <string name="movie_poster_description">movie_poster</string>
  <string name="schedule_watching">schedule watching</string>
  <string name="movie_detail_fragment_label">Movie Detail</string>
  <string name="detail_vote">Vote:</string>
  <string name="detail_popularity">Popularity:</string>
  <string name="detail_original_language">Original language:</string>
  <string name="detail_original_title">Original title:</string>
  <string name="scheduling_fragment_label">Scheduling</string>
  <string name="submit_scheduling">submit</string>
  <string name="menu_toggle_list_title">Toggle list</string>
  <string name="menu_delete_notification_title">Delete notification</string>
  <string name="nothing_to_show_message">No scheduled movies</string>
  <string name="tab_movie_list">Top Movies</string>
  <string name="tab_scheduled_list">Scheduled Movies</string>
  <string name="main_fragment_label">Home</string>
</resources>