<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20sp"
  tools:context=".fragment.MovieDetailFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/row_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/poster"
      android:layout_width="150sp"
      android:layout_height="225sp"
      android:contentDescription="@string/movie_poster_description"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
      android:id="@+id/tdr_container"
      android:layout_width="0sp"
      android:layout_height="0sp"
      android:padding="10sp"
      app:layout_constraintBottom_toBottomOf="@id/poster"
      app:layout_constraintLeft_toRightOf="@id/poster"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:id="@+id/title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/release"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="italic" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="10sp"
          android:orientation="horizontal">

          <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
              android:id="@+id/rating"
              android:layout_width="40sp"
              android:layout_height="40sp"
              app:cpb_progress_max="100"
              app:cpb_progressbar_color="@color/design_default_color_primary"
              app:cpb_progressbar_width="3sp"
              app:cpb_round_border="true"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

            <TextView
              android:id="@+id/rating_value"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:includeFontPadding="false"
              app:layout_constraintBottom_toBottomOf="@+id/rating"
              app:layout_constraintLeft_toLeftOf="@+id/rating"
              app:layout_constraintRight_toRightOf="@+id/rating"
              app:layout_constraintTop_toTopOf="@+id/rating" />
          </androidx.constraintlayout.widget.ConstraintLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:orientation="vertical">

            <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_vote" />

              <TextView
                android:id="@+id/vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_popularity" />

              <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            </LinearLayout>
          </LinearLayout>
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_original_language" />

          <TextView
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10sp"
          android:orientation="vertical">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_original_title" />

          <TextView
            android:id="@+id/original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic" />
        </LinearLayout>
      </LinearLayout>
    </ScrollView>

    <ScrollView
      android:layout_width="wrap_content"
      android:layout_height="0sp"
      android:layout_marginVertical="20sp"
      app:layout_constraintBottom_toTopOf="@id/schedule_button"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/poster">

      <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/schedule_button"
      android:layout_width="0sp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="5sp"
      android:text="@string/schedule_watching"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>